--- a/styles.css
+++ b/styles.css
@@ -81,10 +81,9 @@ h1 {
     border-radius: 5px;
     margin: 3px;
     padding: 3px;
-    width: 20vw;
     position: absolute;
     right: 11vw;
-    top: 10vh;
+    top: 15vh;
 }
 #popupMessage {
     display: flex;
@@ -173,6 +172,12 @@ section {
     padding: 5px;
     font-weight: 400;
 }
+.active {
+    background-color: rgb(76, 18, 143);
+    border-radius: 5px;
+    color: white;
+    padding: 5px;
+}
 canvas{
     max-width: 100%;
 }
@@ -257,28 +262,28 @@ form {
     padding: 5vh 0;
 }
 .new-member img, .activity img {
-    height: 25vh;
+    height: 100px;
 }
 .member-info a {
     text-decoration: none;
 }
 form {
-padding-top: 15px;;
+padding-top: 15px;
 }
 form input, form textarea, form button {
     margin: 10px;
     border-radius: 5px;
 }
 form input {
-    height: 11vh;
+    height: 40px;
     background-color: rgb(240, 234, 234);
 }
 form textarea {
-    height: 40vh;
+    height: 200px;
     background-color: rgb(240, 234, 234);
 }
 form button {
-    height: 11vh;
+    height: 40px;
     background-color: rgba(61, 28, 206, 0.61);
     color: white;
 }
@@ -309,7 +314,7 @@ span {
 #timezone {
     background-color: rgb(240, 234, 234);
     border-radius: 5px;
-    height: 11vh;
+    height: 40px;
     margin: 15px 0;
 }
 .settings-buttons {
@@ -319,7 +324,7 @@ span {
     justify-content: space-between;
 }
 .settings-buttons > button {
-    height: 11vh;
+    height: 40px;
     border-radius: 5px;
 }
 #save {
